[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI.gd" type="Script" id=1]
[ext_resource path="res://bg.jpeg" type="Texture" id=2]
[ext_resource path="res://granada_2/Granada.otf" type="DynamicFontData" id=3]
[ext_resource path="res://SceneLibrary.tscn" type="PackedScene" id=4]
[ext_resource path="res://Inventory.tscn" type="PackedScene" id=5]
[ext_resource path="res://MapMapper.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 34
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 34
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 3 )

[node name="UI" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -2.0
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 1.0
alignment = 2

[node name="Location" type="Label" parent="VBoxContainer"]
margin_top = 35.0
margin_right = 1000.0
margin_bottom = 95.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Location"

[node name="Details" type="Label" parent="VBoxContainer"]
margin_top = 99.0
margin_right = 1000.0
margin_bottom = 399.0
rect_min_size = Vector2( 0, 300 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "place holder"
autowrap = true

[node name="Prompt" type="Label" parent="VBoxContainer"]
margin_top = 403.0
margin_right = 1000.0
margin_bottom = 553.0
rect_min_size = Vector2( 0, 150 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "-"
valign = 2
autowrap = true

[node name="Input" type="LineEdit" parent="VBoxContainer"]
margin_top = 557.0
margin_right = 1000.0
margin_bottom = 601.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="SceneLibrary" parent="." instance=ExtResource( 4 )]

[node name="Inventory" parent="." instance=ExtResource( 5 )]

[node name="MapMapper" type="Node" parent="."]
script = ExtResource( 6 )

[node name="SceneChangeTimer" type="Timer" parent="."]
one_shot = true
[connection signal="text_entered" from="VBoxContainer/Input" to="." method="_on_Input_text_entered"]
[connection signal="moved" from="SceneLibrary" to="." method="_on_moved"]
